2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk

	* gunixmounts.c: Add zfs to ignore_fs array in guess_system_internal:
	Fix for #542156. Patch by Padraig O'Briain

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk

	Bug 547080 – g_file_copy leaks expected errors

	* gfile.c: (g_file_copy): Clear G_IO_ERROR_NOT_SUPPORTED
	errors before trying the next fallback routine. Patch by
	Felix Riemann

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk

	Bug 546017 – Don't copy attributes when copying a symlink

	* gfile.c (g_file_copy_attributes): Specify
	G_FILE_QUERY_INFO_NOFOLLOW_SYMLINKS in the call to
	g_file_set_attributes_from_info. Patch by Christian Kellner

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk

	Bug 546079 – leak in xdgmime

	* xdgmime/xdgmime.c (xdg_mime_shutdown): Fix memory leak.
	Patch by Carlos Garcia Campos

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk

	Bug 545457 – gdmsetup crashed with SIGSEGV in
	g_unix_mount_guess_should_display()

	* gunixvolumemonitor.c (get_mount_for_mount_path): Don't
	crash if no mount is found.

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk

	Bug 545157 – wrong/no list of "open with" applications for .cc and
	.cpp files

	* gdesktopappinfo.c (get_all_desktop_entries_for_mime_type):
	Collect all ancestors, not just direct parents. Pointed
	out by Bastien Nocera

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk

	Bug 544140 - fam-helper 64-bit issue?

	* fam/fam-helper.c: Added missing include so compiler doesn't complain.
	Patch by Priit Laes

2008-08-08  Loïc Minier  <lool@dooz.org>

	Bug 535124 – umask 002 not being applied for new directories, new
	files get the correct umask

	* glocalfile.c: (g_local_file_make_directory): Use 0777 instead of
	0755 as umask

2008-07-19  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.16.5 === 
